<resources>
    <string name="app_name">Kids Footprint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="add_items">Add Items</string>
    <string name="album">Album</string>
    <string name="growth">Growth</string>
    <string name="milestone">Milestone</string>
    <string name="family">Family</string>
    <string name="growth_history">Growth</string>
    <string name="milestone_history">Milestone</string>
    <string name="send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gender">Gender</string>
    <string name="radio_female">Female</string>
    <string name="radio_male">Male</string>
    <string name="messages_string">Messages</string>
    <string name="baby_name_string">baby name</string>
</resources>
