<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->




    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            tools:src="@drawable/ic_add_items"
            app:backgroundTint="@color/purple_200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:layout_gravity="end"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->

            <!--
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->

            <RelativeLayout
                android:id="@+id/background_container"
                android:layout_width="match_parent"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="191dp"
                    android:background="@color/light_grey"
                    tools:src="" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/headshot"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/baby_name"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:layout_toRightOf="@+id/headshot"
                    android:layout_height="wrap_content"
                    android:text="Sierra" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignBottom="@+id/background">

                    <TextView
                        android:id="@+id/album"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:clickable="true"
                        android:text="@string/album" />
                    <TextView
                        android:id="@+id/growth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:clickable="true"
                        android:text="@string/growth" />
                    <TextView
                        android:id="@+id/milestone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:clickable="true"
                        android:textColor="@color/white"
                        android:text="@string/milestone" />
                    <TextView
                        android:id="@+id/family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:text="@string/family" />
                </LinearLayout>
            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/post_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@+id/background_container" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>