<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddBabyActivity">

<!--    ImageView needs to get fixed, how to abstract photos-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/headshot"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/round_border"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nickname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Nickname"
            android:gravity="center_vertical"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_weight="1" />


        <EditText
            android:id="@+id/nickname_input"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:gravity="center_vertical"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_weight="1" />


        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/radio_gender"
            android:orientation="horizontal"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_male"
                android:onClick="onRadioButtonClicked"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/radio_male" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_background"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Birthday"
            android:gravity="center_vertical"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_weight="1" />


        <EditText
            android:id="@+id/dob_input"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />

    </LinearLayout>


    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="Next"
        android:textColor="@color/light_grey" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>